2005-03-14  Kjartan Maraas  <kmaraas@gnome.org>

	* gtik.c: (splitChange): Don't free stuff until we're
	done using it.

2005-02-24  Kjartan Maraas  <kmaraas@gnome.org>

	* access/factory.c: Mark some variables static.
	* gtik.c: (gtik_get_text): Mark function as static.

2005-01-10  Davyd Madeley  <davyd@madeley.id.au>

	* gtik.c:
	   - Update to GtkAboutDialog
	   - Use stock buttons for Add/Remove

2005-01-06  Davyd Madeley  <davyd@madeley.id.au>

	* gtik.c: Fix incorrect percentages for stocks. Fixes bug #143737.
	  Patch from <prothonotar@tarnation.dyndns.org>.

2004-09-29  Davyd Madeley  <davyd@madeley.id.au>

	* gtik.c: Resolve some string composition problems in the ticker.
	  Closes #150894.

2004-09-13  Shaun McCance  <shaunm@gnome.org>

	* help/C/gtik2_applet2-C.omf:
	* help/C/gtik2_applet2.xml:
	- Update for 2.8 from Angela Boyle

2004-08-24  Davyd Madeley  <davyd@madeley.id.au>

	* gtik.c: String composition is confusing and bad. Added a comment to
	assist those coping with #150894. Must fix after string freeze.

2004-08-15  Kjartan Maraas  <kmaraas@gnome.org>

	* Makefile.am: Remove references to screen-exec.
	* access/accessibledrawingarea.h: ANSIfication.
	* access/accessibledrawingareafactory.c:
	(accessible_drawing_area_factory_get_type): Same.
	* access/accessibledrawingareafactory.h: Export
	accessible_drawing_area_*factory*_get_type not
	accessible_drawing_area_get_type which is exported
	in accessibledrawingarea.h.
	* gtik.c: (gtik_applet_fill): Use g_signal_connect().
	Add extern prototype for set_relation(). Also remove
	a call to a non-existant setup_factory() function.

2004-06-17  Dennis Smit  <ds@nerds-incorporated.org>

	* gtik.c (splitChange): "No Change" string
	was marked strangly as reported by:
	Paisa Seeluangsawat  <paisa@users.sf.net>

	Fixes bug #136728.

2004-06-16  Dennis Smit  <ds@nerds-incorporated.org>

	* gtik.c (splitPrice, splitChange):
	Increased the size of the string to 1024 to avoid the crash.
