@@ -1,3 +1,8 @@
+2005-07-01  Davyd Madeley  <davyd@madeley.id.au>
+
+	* gtik.c: use GtkColorButton instead of GnomeColorPicker.
+	  Patch by Michael Terry <mike@mterry.name>. Closes #170189.
+
 2005-03-14  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* gtik.c: (splitChange): Don't free stuff until we're
